--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -41,5 +41,11 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-pool</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-testng</artifactId>
+            <version>${camel-version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
